--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <img src="Images/Tasty Food-logos_black.png" style="height: 300px; width: 300px;" class="" alt="">
     </div>
     <div class="col-lg-4">
-      <img src="images/inter1-removebg-preview.png" class="phone" alt="iphone-mockup">
+      <img src="images/interface.png" class="phone" alt="iphone-mockup">
     </div>
     
   </div>
