--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     
         <div class="row">
         <div class="col-lg-6">
-          <h1 class="big-heading">Order From Your Fauvrate Restaurants Near You</h1>
+          <h1 class="big-heading">Order From Your Favourite Restaurants Near You</h1>
 <!-- search bar  -->
         <div class="input-group">
             <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
